FEAT. Registro no hace login automatico. Verificacion de correo electronico con login automatico.